# mls_apartment_listing_scraper

./: pyproject.toml
data/: apartments3.csv
scraper/: scraper.py
