[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Dan Wigrizer <Wigrizer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
BeautifulSoup4 = "^4.9.1"
lxml = "^4.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
